# Augmented-Deep-Reinforcement-Learning-for-3D-environments

./: README.md  apprenticeship-data-collection.py  duel_dqn.lua  fix_images_object_detector.py  fix_slam_depth.py  fix_xml_annotations.py  generate_smaller_depth.py  get_ppm_pgm_files.py  main_testing.py  object_detector.py  reduce_object_detector_training_data_size.py  supervised-pretraining.lua
dqn/: Experiences.lua  Heap.lua  NeuralQLearnerMod.lua  TransitionTableHeatMap_FPV.lua
slam/: CMakeLists.txt  json.hpp  zmq_rgbd.cc
